Quorum/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignBoolObjBoolean.quorum
class Main
    action Main
        boolean v = true
        Test(v)
    end

    action Test(Boolean var)
        if var:GetValue() = true
            output "passed"
        end
    end
end
