Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumObjBoolean.quorum
class Main
    action Main
        boolean v = true
        Test(v)
    end

    action Test(Number var)
    end
end
